Centered Qr card Component

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         <img
           src="./images/image-qr-code.png"
           alt="Qr barcode image"
-          class="qr-card--barcode-image"
+          class="qr-card__barcode-image"
         />
-        <h1 class="qr-card--heading">
+        <h1 class="qr-card__heading">
           Improve your front-end skills by building projects
         </h1>
-        <p class="qr-card--description">
+        <p class="qr-card__description">
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
