--- a/index.html
+++ b/index.html
@@ -1,59 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Set character encoding for the document -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
+    <!-- Ensure proper scaling on all devices, making the website responsive   -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Link to favicon (the small icon displayed in the browser tab) -->
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+
+    <!-- Preconnecting to google fonts for better performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Importing Google Font: outfit -->
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>Frontend Mentor | QR code component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <!-- Link to external css file for styling -->
+    <link rel="stylesheet" href="./css/style.css" />
+
+    <!-- Page title (shown in browser tab) -->
+    <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
     <main>
-      <div class="qr-card">
+      <!-- Main section of the page, used to display the QR card component -->
+      <section class="qr-card">
+        <!-- QR code barcode image with descriptive alt text -->
         <img
           src="./images/image-qr-code.png"
           alt="Qr barcode image"
           class="qr-card__barcode-image"
         />
+
+        <!-- Main heading of the QR card -->
         <h1 class="qr-card__heading">
           Improve your front-end skills by building projects
         </h1>
+
+        <!-- Description text for the QR card -->
         <p class="qr-card__description">
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
-      </div>
+      </section>
     </main>
+
+    <!-- Footer for attribution and credits -->
     <footer>
       <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        <p>
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >
+          Coded by <a href="#">Precious Nkwor</a>
+        </p>
       </div>
     </footer>
   </body>
