Changed Attribution div to section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- Footer for attribution and credits -->
     <footer>
-      <div class="attribution">
+      <section class="attribution">
         <p>
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
@@ -65,7 +65,7 @@
           >
           Coded by <a href="#">Precious Nkwor</a>
         </p>
-      </div>
+      </section>
     </footer>
   </body>
 </html>
